Comit para ser deletado!

--- a/server.cfg
+++ b/server.cfg
@@ -23,6 +23,7 @@ start zrp
 #===============================RESTART================================#
 restart sessionmanager
 start ZentryCsharp_Utils
+start VK_interiors
 
 
 # This allows players to use scripthook based plugins such as lambda menu.
