Menu Player etc FEito

--- a/server.cfg
+++ b/server.cfg
@@ -73,6 +73,6 @@ sv_endpointprivacy true
 
 # Server player slot limit (must be between 1 and 32)
 sv_maxclients 32
-
+#set onesync_enabled 1
 # License key for your server (https://keymaster.fivem.net)
-sv_licenseKey yhwsl71uc3jip5tyqa9axzckgn6n9iph
+sv_licenseKey inyxs4qqyph7yxfsuctbcsymwqt3fkzu
