Novo Sistema de Garagem faltando polimento

--- a/server.cfg
+++ b/server.cfg
@@ -19,6 +19,7 @@ start GHMattiMySQL
 #================================VRP===================================#
 start zrp_ghmattimysql
 start zrp
+start lscustoms
 #===============================RESTART================================#
 restart sessionmanager
 start ZentryCsharp_Utils
