Movimento e um monte de alteracoes olhar para Robbery

--- a/server.cfg
+++ b/server.cfg
@@ -20,6 +20,7 @@ start GHMattiMySQL
 start zrp_ghmattimysql
 start zrp
 start lscustoms
+start zentry_lua_utils
 #===============================RESTART================================#
 restart sessionmanager
 start ZentryCsharp_Utils
@@ -57,7 +58,7 @@ sv_hostname "ZRP Server!"
 set temp_convar "hey world!"
 
 # Uncomment this line if you do not want your server to be listed in the server browser.
-#sv_master1 ""
+sv_master1 ""
 
 # Want to only allow players authenticated with a third-party provider like Steam?
 # Don't forget Social Club is a third party provider too!
