Novo sistema de apreencao de carro

--- a/server.cfg
+++ b/server.cfg
@@ -21,6 +21,8 @@ start zrp_ghmattimysql
 start zrp
 start lscustoms
 start zentry_lua_utils
+start Paz
+start vehTowing
 #===============================RESTART================================#
 restart sessionmanager
 start ZentryCsharp_Utils
