--- a/server.cfg
+++ b/server.cfg
@@ -21,6 +21,7 @@ start zrp_ghmattimysql
 start zrp
 start lscustoms
 start zentry_lua_utils
+start zrp_vehsealer
 start Paz
 #===============================RESTART================================#
 restart sessionmanager
