Update geral Fivem

--- a/server.cfg
+++ b/server.cfg
@@ -10,7 +10,6 @@ start spawnmanager
 start sessionmanager
 start fivem
 start hardcap
-start rconlog
 start scoreboard
 start playernames
 
@@ -21,7 +20,6 @@ start zrp_ghmattimysql
 start zrp
 start lscustoms
 start zentry_lua_utils
-start zrp_vehsealer
 start Paz
 #===============================RESTART================================#
 restart sessionmanager
@@ -49,7 +47,6 @@ sets tags "default"
 
 # Set your server's hostname
 sv_hostname "ZRP Server!"
-
 # Nested configs!
 #exec server_internal.cfg
 
@@ -76,7 +73,7 @@ add_principal identifier.steam:110000112345678 group.admin # add the admin to th
 sv_endpointprivacy true
 
 # Server player slot limit (must be between 1 and 32)
-sv_maxclients 32
-#set onesync_enabled 1
+sv_maxclients 64
+set onesync_enabled 1
 # License key for your server (https://keymaster.fivem.net)
 sv_licenseKey inyxs4qqyph7yxfsuctbcsymwqt3fkzu
