basic_garage db

--- a/server.cfg
+++ b/server.cfg
@@ -21,7 +21,7 @@ start zrp_ghmattimysql
 start zrp
 start lscustoms
 start zentry_lua_utils
-start zrp_vehsealer
+start zrp_interface
 start Paz
 #===============================RESTART================================#
 restart sessionmanager
