--- a/server.cfg
+++ b/server.cfg
@@ -20,12 +20,13 @@ start GHMattiMySQL
 start zrp_ghmattimysql
 start zrp
 start lscustoms
-start zentry_lua_utils
 start zrp_interface
 start Paz
+start teste
 #===============================RESTART================================#
 restart sessionmanager
 start ZentryCsharp_Utils
+start zentry_anti_cheat
 
 
 # This allows players to use scripthook based plugins such as lambda menu.
@@ -76,7 +77,7 @@ add_principal identifier.steam:110000112345678 group.admin # add the admin to th
 sv_endpointprivacy true
 
 # Server player slot limit (must be between 1 and 32)
-sv_maxclients 32
-#set onesync_enabled 1
+sv_maxclients 64
+set onesync_enabled 1
 # License key for your server (https://keymaster.fivem.net)
 sv_licenseKey inyxs4qqyph7yxfsuctbcsymwqt3fkzu
